# GIC_Cinema

./: .gitignore  Updated_GIC_Cinema.py  derp.py  helper.bat  main.py  pyproject.toml  readme.md
src/: cinema.py  custom_exception.py  request_user_input.py  start.py
src/util/: convert_alphabet_index.py
tests/: test_cinema_class.py  test_convert_alphabet_index.py  test_request_user_input.py  test_start.py  test_suite.py
