[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GIC_Cinema"
version = "0.1.0"
authors = [{ name="Ow Yong Gui Kang", email="gui_kang@hotmail.com" }]
description = "GIC Cinemas Booking System"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uuid"
]